--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,9 @@
 @import 'tailwindcss';
-@plugin "daisyui";
+@plugin "daisyui" {
+  themes:
+    light --default,
+    dark --prefersdark;
+}
 
 .main {
   @apply max-w-300 mx-auto mt-8;
